test: add new ElectionLogic unit test framework
Signed-off-by: Greg Farnum <gfarnum@redhat.com>
(cherry picked from commit 5a64cdf4175cfc90fe24c26150b33938e66155d1)

Resolves: rhbz#1800382

--- a/src/test/mon/CMakeLists.txt
+++ b/src/test/mon/CMakeLists.txt
@@ -74,3 +74,10 @@ set_target_properties(ceph_test_mon_rss_usage PROPERTIES
   INSTALL_RPATH "")
 install(TARGETS ceph_test_mon_rss_usage
   DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+#unittest_mon_election
+add_executable(unittest_mon_election
+  test_election.cc
+  )
+add_ceph_unittest(unittest_mon_election)
+target_link_libraries(unittest_mon_election mon global)
