--- a/src/mgr/CMakeLists.txt
+++ b/src/mgr/CMakeLists.txt
@@ -19,6 +19,7 @@ set(mgr_srcs
   OSDPerfMetricTypes.cc
   OSDPerfMetricCollector.cc
   PyFormatter.cc
+  PyUtil.cc
   PyModule.cc
   PyModuleRegistry.cc
   PyModuleRunner.cc
