rgw_cksum: add junit5-based unit test suite
This can be run by hand with:

./mvnw clean package
./mvnw test -Dtest=PutObjects

The following properties are sourced from the environment:

    AWS_ACCESS_KEY_ID
    AWS_SECRET_ACCESS_KEY

    RGW_HTTP_ENDPOINT_URL
    RGW_HTTPS_ENDPOINT_URL

Then adds:

qa/workunits/rgw: add test driver script for maven suite

Launch it fromn cls.yaml, as with test_librgw_file.h.

Resolves: rhbz#2256969
Resolves: rhbz#2260354
Resolves: rhbz#2260356

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
Signed-off-by: matt benjamin <mbenjamin@redhat.com>
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/qa/suites/rgw/verify/tasks/0-install.yaml
+++ b/qa/suites/rgw/verify/tasks/0-install.yaml
@@ -4,6 +4,11 @@ os_type: centos
 tasks:
 - install:
 #    flavor: notcmalloc
+      # extra packages added for the rgw-datacache task
+      # java and maven needed for S3 trailer signature tests
+      extra_packages:
+        deb: ['s3cmd', 'maven']
+        rpm: ['s3cmd', 'maven']
 - ceph:
 - openssl_keys:
 - rgw:
