compressor: Add another data formt for QAT zlib
QAT zlib 'QZ_DEFLATE_RAW' data format cannot decompress
by QAT hardware. So there is 'QZ_DEFLATE_GZIP_EXT' data
format added.

'QZ_DEFLATE_GZIP_EXT' data format need to add gz_header
by deflateSetHeader() in QATzip. And it leads multi stream
in one compression for hardware buffer. So the windows bit
is important information for decompression, which related to
if the inflate remove header.

Add busy_polling setting for reducing latency

Signed-off-by: Feng,Hualong <hualong.feng@intel.com>
(cherry picked from commit 77d4dead0bfd75f08a440ccd6707458cdc574034)

--- a/src/common/options/global.yaml.in
+++ b/src/common/options/global.yaml.in
@@ -790,6 +790,17 @@ options:
   level: advanced
   desc: Set the maximum number of session within Qatzip when using QAT compressor
   default: 256
+- name: qat_compressor_data_fmt
+  type: str
+  level: advanced
+  desc: Set GZIP data format within Qatzip when using QAT compressor
+  long_desc: QZ_DEFLATE_GZIP_EXT data format is in DEFLATE wrapped by Intel QAT Gzip extension header and footer; QZ_DEFLATE_RAW data format is in raw DEFLATE without any additional header(This data format only support compression, decompression will fallback to software).
+  default: QZ_DEFLATE_GZIP_EXT
+- name: qat_compressor_busy_polling
+  type: bool
+  level: advanced
+  desc: Set QAT busy bolling to reduce latency at the cost of potentially increasing CPU usage
+  default: false
 - name: plugin_crypto_accelerator
   type: str
   level: advanced
